--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ input[type=checkbox]{
 }
 
 table{
-    margin: auto 0;
+    margin: auto auto;
     width: 100%;
     background-color: burlywood;
     text-align: center;
