--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     width: 960px;
     height: 200px;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
 }
 
 h1{
@@ -11,9 +11,9 @@ h1{
 }
 
 #myform{
-    margin: auto auto;
+    margin: 0 0;
     padding: 20px 20px;
-    width: 800px;
+    width: 600px;
     display: flex;
     justify-content: space-around;
 }
@@ -22,7 +22,7 @@ h1{
     margin: auto auto;
     padding: 10px 0px;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row;
     align-items: center;
 }
 
@@ -32,7 +32,7 @@ input[type=checkbox]{
     bottom: 1px;
 }
 
-table{
+#pmdr{
     margin: auto auto;
     width: 100%;
     height: auto;
@@ -45,7 +45,9 @@ table{
     padding: 0 0;
     position: fixed;
     bottom: 0;
-    right: 666px;
-    min-width: 350px;
+    right: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
     background-color: burlywood;
 }
