--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ h1{
     padding: 20px 20px;
     width: 600px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 #flexy{
